body background added

--- a/style.css
+++ b/style.css
@@ -12,13 +12,14 @@ body {
   color: white;
   overflow-x: hidden;
   position: absolute;
+  width: 100%;
+  background-color: #1b004e;
 }
 header {
   position: fixed;
   z-index: 3;
-  width: 100%;
   background: url(images/bg.svg);
-
+  width: 100%;
   background-size: 100%;
   background-repeat: no-repeat;
 }
