--- a/css/style.css
+++ b/css/style.css
@@ -607,8 +607,8 @@ a {
     display: none;
   }
   header .buttontrade {
-    z-index: 3;
-    background-image: url(images/Group\ 68.svg);
+    z-index: 7;
+    background-image: url(../images/Group\ 68.svg);
     width: 25px;
     height: 14.64px;
     margin-top: 21.06px;
